Opp 1208 mininnboks api ktor (#54)
* fungerende gradle build

* Rename .java to .kt

* Konvertet til Kotlin Kode med Intellij

* Rename .java to .kt

* Konvertet til Kotlin api klasser til ktor

* Compilation er ok. Men test feiler. Før bumping av commons version

* Midlirtidig commit. Noen tester feiler

* Test fungerer

* ending i .github bygg file med gradle bygg.

* miljø oppsett

* miljø oppsett

* Update main.yaml

removed duplicate

* Update build.gradle

removed gitusername and password

* konvertere gradle build til kotlin og noen rydding

* Added appdynamics image

* Deployment på q1 miljø

* Update main.yaml

small fiks

* Update build.gradle.kts

added fatJar

* Update build.gradle.kts

removed duplicate code

* Fikset feil related til å lage jar og mainclass

* Update main.yaml

feil navn til jar fil

* Update Dockerfile

* Fikset feil relatert til at nais klarer ikke starte app.jar - missing gradle wrapper jar files

* test

* Update build.gradle.kts

* removed duplicate jars

* Update build.gradle.kts

* Update build.gradle.kts

* Update Dockerfile

-XX:+IgnoreUnrecognizedVMOptions

* Update Dockerfile

* Update qa-template.yaml

Updated isAlive and isReady

* Fikset endringer relatert til isAlive og route

* Update qa-template.yaml

bare en pod i q1

* Update qa-template.yaml

* Update Dockerfile

* Update Dockerfile

* Update qa-template.yaml

* Update HttpHandler.kt

changed port to 8081

* Endret context for applikasjon route

* fikset problem med lesing av tekster

* [OPP-1208] oppsett for eksterne-kall

vi må huske å bytte coroutine-context før io-kall slik at request-threadpoolen til ktor ikke blir brukt opp på å vente på trege soap-kall

* introdusert withSubject

* Env variable endringer

* env variable feil fikset

* Update Application.kt

* Update Application.kt

* Update ServiceConfig.kt

* Update ServiceConfig.kt

* Update